# hd2api.py

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.devcontainer/: Dockerfile
.github/workflows/: CI.yml  publishproject.yml  schedule-update-actions.yml
docs/: modules.rst  python_package.hello_world.rst  python_package.rst
docs/source/: builders.rst  conf.py  guide_status.rst  hd2api.builders.rst  hd2api.constants.rst  hd2api.logging.rst  hd2api.models.ABC.rst  hd2api.models.Base.rst  hd2api.models.rst  hd2api.rst  hd2api.services.rst  hd2api.util.rst  hd2apiloggingsubmodule.rst  index.rst  intro.rst  modules.rst
src/hd2api/: __init__.py  api_config.py  load_json.py
src/hd2api/builders/: __init__.py  assignment_builder.py  campaign_builder.py  effect_builder.py  planet_builder.py  region_builder.py  sector_state_builder.py  statistics_builder.py  war_builder.py
src/hd2api/constants/: constants.py
src/hd2api/logging/: logging.py
src/hd2api/loggingsubmodule/: logging.py
src/hd2api/models/: Assignment2.py  Biome.py  Campaign2.py  Dispatch.py  DiveharderAll.py  Effects.py  Event.py  GalaxyStatic.py  Hazard.py  Planet.py  Position.py  Region.py  Reward2.py  SectorState.py  SpaceStation2.py  Statistics.py  SteamNews.py  Task2.py  War.py  __init__.py
src/hd2api/models/ABC/: model.py  utils.py
src/hd2api/models/Base/: Assignment.py  Campaign.py  Cost.py  Effects.py  Episode.py  GalaxyStats.py  GlobalEvent.py  GlobalResource.py  HomeWorld.py  JointOperation.py  NewsFeedItem.py  PlanetAttack.py  PlanetCoordinates.py  PlanetEvent.py  PlanetInfo.py  PlanetRegion.py  PlanetRegionInfo.py  PlanetStats.py  PlanetStatus.py  Reward.py  Setting.py  SpaceStation.py  SteamNewsRaw.py  TacticalActions.py  Task.py  WarId.py  WarInfo.py  WarStatus.py  WarSummary.py  __init__.py
src/hd2api/services/: __init__.py  async_None_service.py  async_comm_service.py  async_direct_service.py  async_diveh_service.py  async_raw_service.py  async_v1_service.py  service_base.py  service_utils.py  utils.py
src/hd2api/statics/effects/: planetEffects.json
src/hd2api/statics/planets/: biomes.json  planetRegion.json  planets.json
src/hd2api/util/: __init__.py  find.py  utils.py
src/helldive/: load_json.py
src/helldive/builders/: campaign_builder.py  planet_builder.py  war_builder.py
src/helldive/models/: Assignment2.py  Campaign2.py  DiveharderAll.py  Event.py  GalaxyStatic.py  Task2.py
src/helldive/models/ABC/: model.py
src/helldive/models/Base/: PlanetEvent.py  WarInfo.py  WarStatus.py
src/helldive/services/: async_None_service.py  async_raw_service.py
tests/: conftest.py  test_methods.py
